--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,7 +13,12 @@ li{
   width:100%;
   height: auto;
 }
-
+.iconBtn{
+  margin-left: 5px
+}
+.img-fluid{
+  width: 100%;
+}
 .overlay {
   position: absolute;
     top: 0;
@@ -56,6 +61,7 @@ left: 29%;
 transform: translateY(90%);
 text-align: center;
 }
+
 
 /*LIST ITEM*/
 .row.col-lg-5.col-md-5.col-xs-12.itemBg{
@@ -163,33 +169,30 @@ text-align: center;
   padding:0;
   position: relative;
   overflow:hidden;
-  
+
   cursor:pointer;
 }
 
 .landing-inner-content {
   background: #FFF;
-  width: 2620px;
-  height: 280px;
+  width: 95%;
+
+  margin-left: 6%;
+margin-right: -6%;
+
 }
 
 .box {
   position: relative;
 
   width: 240px;
-  height: 240px;
+
   margin: 20px 20px 0 0;
   float: left;
   overflow:hidden;
 }
 
-.box:first-of-type {
-  margin-left:20px;
-}
 
-.box:last-of-type {
-  margin-right:20px;
-}
 
 .box-content {
   background: #000;
@@ -203,4 +206,10 @@ text-align: center;
 
 .box-content img {
   width: 100%;
+}
+
+@media only screen and (max-width: 600px){
+.landing-inner-content {
+    margin-left: -18px;
+}
 }
